게임 데이터 한글화 로직 구현